fix: add font-weight to @font-face declarations and align body weight
Agent-Logs-Url: https://github.com/TheoMeinhardt/zahnwien/sessions/8ee8a590-028e-487a-9b62-7a1a9f9a7e0a

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,10 +2,12 @@
   font-family: 'NewYork';
   src: url(./fonts/NewYork.otf) format('opentype');
   font-style: normal;
+  font-weight: 400;
 }
 
 @font-face {
   font-family: 'Alphazet';
   src: url(./fonts/Alphazet-Light.woff2) format('woff2');
   font-style: normal;
+  font-weight: 300;
 }
