--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,7 +17,7 @@ body {
     -apple-system,
     'Roboto',
     sans-serif !important;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .text-h1, .text-h2, .text-h3, .text-h4, .text-h5, .text-h6 {
